# cgpt-cli

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  justfile  pyproject.toml  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deps-lock-check.yml  test.yml
docs/: index.md  installation.md  usage.md
src/cgpt/: __init__.py  api.py  cli.py  config.py
tests/: __init__.py  test_cgpt.py  test_cli.py
tests/pkg_cgpt/: test_cli.py  test_cli_ask.py  test_config.py
