[metadata]
name = cgpt-cli
version = 0.1.0
author = Mohammed Moosa Sharieff
author_email = moosasharieff@gmail.com
description = Tiny ChatGPT terminal client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moosasharieff/cgpt-cli
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    Homepage = https://github.com/moosasharieff/cgpt-cli
    Issues = https://github.com/moosasharieff/cgpt-cli/issues

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    click>=8.0,<9.0
    rich>=13.0,<15.0
    requests>=2.28,<3.0
# include_package_data = True  ; uncomment if you ship non-code files

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cgpt = cgpt.cli:main

[tool:pytest]
testpath = tests
